# Anvil

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING_AGENT.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  PROJECT_GUIDE.md  README.md  anvil.toml  pipeline.config.sh  pipeline.graph.dot  pipeline.models.json  run-pipeline.sh  run_pipeline.py
.claude/: settings.json
.claude/agents/: healer.md  supervisor.md
.claude/rules/: compaction.md  context-budget.md  context-fidelity.md  context-management.md  no-assumptions.md
.claude/skills/cost-report/: SKILL.md
.claude/skills/error-analysis/: SKILL.md
.claude/skills/feature-add/: SKILL.md
.claude/skills/generate-dtu/: SKILL.md
.claude/skills/heal/: SKILL.md
.claude/skills/phase0/: SKILL.md
.github/workflows/: autonomous-pipeline.yml  ci.yml
benchmarks/: benchmark.config.sh  score.py
benchmarks/target-hard/: CLAUDE.md  pyproject.toml
benchmarks/tickets/: BENCH-1.md  BENCH-10.md  BENCH-2.md  BENCH-3.md  BENCH-4.md  BENCH-5.md  BENCH-6.md  BENCH-7.md  BENCH-8.md  BENCH-9.md
docs/: MEMORY_MCP_SCHEMA.md  PITCH.md  PITCH.old.md
docs/artifacts/: benchmark-evidence-combined.json
docs/templates/: API_SPEC.md  APP_FLOW.md  DATA_MODELS.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  OBSERVABILITY.md  PRD.md  ROLLOUT_PLAN.md  SECURITY_CHECKLIST.md  TECH_STACK.md  TESTING_PLAN.md
scripts/: agent-test.sh  benchmark.sh  review-validator.sh  run-benchmark.sh  self-validate.sh  setup-anvil.sh  test-anvil.sh
src/: config.rs  main.rs  mcp.rs  phase.rs  pipeline.rs  scorer.rs  stagnation.rs  types.rs  watchdog.rs
(+25 files in other folders)
