[package]
name = "anvil"
version = "4.0.0"
edition = "2021"
description = "Quality-maximizing pipeline harness for Claude Code"
license = "MIT"

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
similar = "2"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
regex = "1"
glob = "0.3"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
strip = true
